--- a/sass/style.scss
+++ b/sass/style.scss
@@ -44,7 +44,8 @@ main {
     }
 
     @include respond-to(sp) {
-        width: calc(100% - 120px);
+        width: 100%;
+        top: 60px;
     }
 }
 
@@ -54,11 +55,13 @@ img {
 
 .tab-br {
     display: none;
-}
 
-@include respond-to(tab) {
-    .tab-br {
+    @include respond-to(tab) {
         display: block;
+    }
+
+    @include respond-to(sp) {
+        display: none;
     }
 }
 
@@ -72,14 +75,16 @@ img {
     top: 0;
     left: 0;
     color: #fff;
+    z-index: 1;
 
     @include respond-to(tab) {
         width: 200px;
     }
 
     @include respond-to(sp) {
-        width: 120px;
-        padding: 40px 0;
+        width: 100%;
+        padding: 0 20px;
+        height: fit-content;
     }
 
 }
@@ -87,6 +92,14 @@ img {
 .header-wrapper {
     width: fit-content;
     margin: 0 auto;
+
+    @include respond-to(sp) {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        height: 60px;
+        align-items: center;
+    }
 }
 
 .header-title {
@@ -99,10 +112,25 @@ img {
 
 .header-nav {
     margin-top: 40px;
+
+    @include respond-to(sp) {
+        margin: 0;
+    }
+}
+
+.header-nav-list{
+    @include respond-to(sp) {
+        display: flex;
+        gap: 20px;
+    }
 }
 
 .header-nav-item:first-child {
     margin-bottom: 20px;
+
+    @include respond-to(sp){
+        margin-bottom: 0;
+    }
 }
 
 .header-nav-item a:hover {
@@ -162,7 +190,6 @@ img {
         }
     }
 }
-
 
 .works-tag {
     width: fit-content;
