--- a/page5/sass/style.scss
+++ b/page5/sass/style.scss
@@ -1,257 +1,280 @@
 @charset "UTF-8";
-
 /* 変数 */
-$font: #777777;
-
-$background: #4E4D5F;
-
-$breakpoints: (
-    tab: 1024px,
-    sp:600px
-);
-
-@mixin respond-to($breakpoint) {
-    @media (max-width: map-get($breakpoints, $breakpoint)) {
-        @content;
-    }
-}
-
 /* 共通クラス */
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    font-family: "Josefin Sans", "Noto Sans JP", sans-serif;
-    color: $font;
-    font-size: 16px;
-    position: relative;
-
-    @include respond-to(sp) {
-        font-size: 14px;
-    }
+  font-family: "Josefin Sans", "Noto Sans JP", sans-serif;
+  color: #777777;
+  font-size: 16px;
+  position: relative;
+}
+@media (max-width: 600px) {
+  body {
+    font-size: 14px;
+  }
 }
 
 main {
-    width: calc(100% - 280px);
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100vh;
-
-    @include respond-to(tab) {
-        width: calc(100% - 200px);
-    }
-
-    @include respond-to(sp) {
-        width: 100%;
-    }
+  width: calc(100% - 280px);
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100vh;
+}
+@media (max-width: 1024px) {
+  main {
+    width: calc(100% - 200px);
+  }
+}
+@media (max-width: 600px) {
+  main {
+    width: 100%;
+  }
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
 
 .tab-br {
+  display: none;
+}
+@media (max-width: 1024px) {
+  .tab-br {
+    display: block;
+  }
+}
+@media (max-width: 600px) {
+  .tab-br {
     display: none;
-
-    @include respond-to(tab) {
-        display: block;
-    }
-
-    @include respond-to(sp) {
-        display: none;
-    }
+  }
 }
 
 /* ヘッダークラス */
 #header {
-    background-color: $background;
-    width: 280px;
-    height: 100vh;
-    padding: 80px 0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    color: #fff;
-    z-index: 1;
-
-    @include respond-to(tab) {
-        width: 200px;
-    }
-
-    @include respond-to(sp) {
-        width: 100%;
-        padding: 0 20px;
-        height: fit-content;
-    }
-
+  background-color: #4E4D5F;
+  width: 280px;
+  height: 100vh;
+  padding: 80px 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  color: #fff;
+  z-index: 1;
+}
+@media (max-width: 1024px) {
+  #header {
+    width: 200px;
+  }
+}
+@media (max-width: 600px) {
+  #header {
+    width: 100%;
+    padding: 0 20px;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
 }
 
 .header-wrapper {
-    width: fit-content;
-    margin: 0 auto;
-
-    @include respond-to(sp) {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        height: 60px;
-        align-items: center;
-    }
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 auto;
+}
+@media (max-width: 600px) {
+  .header-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
+    height: 60px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .header-title {
-    font-size: 24px;
-
-    @include respond-to(sp) {
-        font-size: 20px;
-    }
+  font-size: 24px;
+}
+@media (max-width: 600px) {
+  .header-title {
+    font-size: 20px;
+  }
 }
 
 .header-nav {
-    margin-top: 40px;
-
-    @include respond-to(sp) {
-        margin: 0;
-    }
+  margin-top: 40px;
+}
+@media (max-width: 600px) {
+  .header-nav {
+    margin: 0;
+  }
 }
 
-.header-nav-list{
-    @include respond-to(sp) {
-        display: flex;
-        gap: 20px;
-    }
+@media (max-width: 600px) {
+  .header-nav-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 20px;
+  }
 }
 
 .header-nav-item:first-child {
-    margin-bottom: 20px;
-
-    @include respond-to(sp){
-        margin-bottom: 0;
-    }
+  margin-bottom: 20px;
+}
+@media (max-width: 600px) {
+  .header-nav-item:first-child {
+    margin-bottom: 0;
+  }
 }
 
 .header-nav-item a:hover {
-    opacity: 0.5;
+  opacity: 0.5;
 }
 
 /* pageクラス */
-#page{
-    @include respond-to(sp){
-        padding-top: 60px;
-    }
+@media (max-width: 600px) {
+  #page {
+    padding-top: 60px;
+  }
 }
 
 .page-wrapper {
-    font-size: 12px;
-    padding: 4vw;
-    position: fixed;
-    height: 100vh;
-    width: calc((100% - 280px)*0.4);
-    top: 0;
-    left: 280px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    @include respond-to(tab) {
-        width: 100%;
-        left: 200px;
-        position: static;
-        display: block;
-        height: auto;
-        padding: 6vw 4vw;
-    }
-
-    @include respond-to(sp) {
-        padding: 8vw 4vw;
-    }
+  font-size: 12px;
+  padding: 4vw;
+  position: fixed;
+  height: 100vh;
+  width: calc((100% - 280px) * 0.4);
+  top: 0;
+  left: 280px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+@media (max-width: 1024px) {
+  .page-wrapper {
+    width: 100%;
+    left: 200px;
+    position: static;
+    display: block;
+    height: auto;
+    padding: 6vw 4vw;
+  }
+}
+@media (max-width: 600px) {
+  .page-wrapper {
+    padding: 8vw 4vw;
+  }
 }
 
-.page-text {
-    h2 {
-        font-size: 20px;
-        font-weight: 600;
-
-        @include respond-to(sp) {
-            font-size: 16px;
-        }
-    }
-
-    p {
-        margin-top: 20px;
-    }
-
-    a {
-        color: blue;
-        display: inline-block;
-        margin-top: 20px;
-        text-decoration: underline;
-
-        &:hover {
-            opacity: 0.5;
-        }
-    }
+.page-text h2 {
+  font-size: 20px;
+  font-weight: 600;
+}
+@media (max-width: 600px) {
+  .page-text h2 {
+    font-size: 16px;
+  }
+}
+.page-text p {
+  margin-top: 20px;
+}
+.page-text a {
+  color: blue;
+  display: inline-block;
+  margin-top: 20px;
+  text-decoration: underline;
+}
+.page-text a:hover {
+  opacity: 0.5;
 }
 
 .page-tag {
-    width: fit-content;
-
-    p {
-        display: inline-block;
-        font-size: 10px;
-        border: 1px solid;
-        padding: 2px 8px;
-        border-radius: 10px;
-    }
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.page-tag p {
+  display: inline-block;
+  font-size: 10px;
+  border: 1px solid;
+  padding: 2px 8px;
+  border-radius: 10px;
 }
 
 .btn-wrapper {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-
-    @include respond-to(tab) {
-        margin-top: 8%;
-    }
-
-    div {
-        font-size: 16px;
-
-        &:hover {
-            opacity: 0.5;
-            cursor: pointer;
-        }
-    }
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+@media (max-width: 1024px) {
+  .btn-wrapper {
+    margin-top: 8%;
+  }
+}
+.btn-wrapper div {
+  font-size: 16px;
+}
+.btn-wrapper div:hover {
+  opacity: 0.5;
+  cursor: pointer;
 }
 
 .page-img {
-    display: flex;
-    width: 60%;
-    justify-content: space-between;
-    padding: 4vw 4vw 4vw 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-
-    @include respond-to(tab) {
-        width: 100%;
-        position: static;
-        padding: 0 4vw 6vw 4vw;
-    }
-
-    @include respond-to(sp) {
-        padding: 0 4vw 8vw 4vw;
-    }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 60%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 4vw 4vw 4vw 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+@media (max-width: 1024px) {
+  .page-img {
+    width: 100%;
+    position: static;
+    padding: 0 4vw 6vw 4vw;
+  }
+}
+@media (max-width: 600px) {
+  .page-img {
+    padding: 0 4vw 8vw 4vw;
+  }
 }
 
 .lp-img {
-    width: 70%;
-    object-fit: contain;
-    object-position: top;
+  width: 70%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: top;
+     object-position: top;
 }
 
 .sp-img {
-    width: 25%;
+  width: 25%;
 }
