--- a/page1/css/style.css
+++ b/page1/css/style.css
@@ -153,7 +153,7 @@ img {
   font-size: 12px;
   padding: 4vw;
   position: fixed;
-  height: 100vh;
+  height: 100%;
   width: calc((100% - 280px) * 0.4);
   top: 0;
   left: 280px;
