--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ main {
   position: absolute;
   top: 0;
   right: 0;
-  height: 100vh;
+  height: 100%;
 }
 @media (max-width: 1024px) {
   main {
