--- a/page2/sass/style.scss
+++ b/page2/sass/style.scss
@@ -37,7 +37,7 @@ main {
     position: absolute;
     top: 0;
     right: 0;
-    height: 100vh;
+    height: 100%;
 
     @include respond-to(tab) {
         width: calc(100% - 200px);
@@ -114,7 +114,7 @@ img {
     font-size: 12px;
     padding: 4vw;
     position: fixed;
-    height: 100vh;
+    height: 100%;
     width: calc((100% - 280px)*0.4);
     top: 0;
     left: 280px;
