--- a/about/css/style.css
+++ b/about/css/style.css
@@ -22,7 +22,7 @@ main {
   position: absolute;
   top: 0;
   right: 0;
-  height: 100vh;
+  height: 100%;
 }
 @media (max-width: 1024px) {
   main {
@@ -165,7 +165,7 @@ img {
 .about-wrapper {
   padding: 4vw;
   position: fixed;
-  height: 100vh;
+  height: 100%;
   width: calc((100% - 280px) * 0.4);
   top: 0;
   left: 280px;
