--- a/sass/style.scss
+++ b/sass/style.scss
@@ -68,7 +68,7 @@ img {
 #header {
     background-color: $background;
     width: 280px;
-    height: 100vh;
+    height: 100%;
     padding: 80px 0;
     position: fixed;
     top: 0;
